Trying to fix horizontal scroll body issue

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -55,5 +55,8 @@ $breakpoints: (
 }
 body {
   box-sizing: border-box;
-  overflow-y: hidden;
+}
+html, body {
+  overflow-x: hidden;
+  min-width: 100%;
 }
